# PyPDFSeal

./: .gitattributes  .gitignore  README.md  index.html  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: build.yml  ci.yml  release.yml
src/: App.css  App.tsx  components.css  hero.ts  index.css  main.tsx  pdf-viewer.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
src-tauri/src/commands/: batch.rs  db.rs  dialogs.rs  fonts.rs  mod.rs  preview.rs
src-tauri/src/core/: locator.rs  mod.rs  models.rs  pipeline.rs  signer.rs  stamper.rs  watermarker.rs
src-tauri/src/pdf/: content_stream.rs  document.rs  mod.rs  signature_dict.rs  xobject.rs
src-tauri/src/text/: font_resolver.rs  layout.rs  mod.rs  watermark_image.rs
src/components/controls/: AppModals.tsx  LogPanel.tsx  ProgressPanel.tsx
src/components/layout/: FileList.tsx  Preview.tsx  Sidebar.tsx
src/components/panels/: CertPanel.tsx  HoneycombColorPicker.tsx  PositionPanel.tsx  SealPanel.tsx  SettingsPanel.tsx  WatermarkPanel.tsx
src/components/preview/: PdfViewer.tsx  SealOverlay.tsx  WatermarkOverlay.tsx
src/hooks/: index.ts  useAppSettings.ts  useBatchProcess.ts  useModalDraggable.ts  usePdfDocument.ts  useStore.ts
src/store/: configStore.ts
src/types/: index.ts
src/utils/: coordinates.ts  ipc.ts  localFile.ts  updates.ts
