[package]
name = "pydfseal"
version = "0.1.2"
description = "PDF batch electronic seal stamping tool"
authors = ["jinht"]
edition = "2024"

[lib]
name = "pydfseal_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-store = "2"

# PDF Processing
lopdf = "0.34"
image = { version = "0.25", features = ["png", "jpeg"] }

# Text Rendering (watermarks)
cosmic-text = "0.12"
font-kit = "0.14"
imageproc = "0.25"
ab_glyph = "0.2"

# Digital Signatures
cms = { version = "0.2", features = ["builder"] }
x509-cert = "0.2"
der = "0.7"
sha2 = "0.10"
rsa = "0.9"
spki = "0.7"
pkcs8 = "0.10"
const-oid = "0.9"
openssl = { version = "0.10", features = ["vendored"] }
signature = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / Concurrency
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Utilities
tempfile = "3"
base16ct = "0.2"

[profile.release]
strip = true
lto = "thin"
codegen-units = 16
panic = "abort"
